--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -96,7 +96,7 @@ To accomodate the increasing number of attendees each year, we are excited to an
 
 ### Conference Hotels
 
-The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 30th, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
+The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by October 3rd, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
 
 <BannerMessage icon={faInfo} type='info' closeButton={false}>
   We have secured the oSTEM room block discount for any length of stay between Wednesday, October 16 and Monday, October 21.
