--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -40,7 +40,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       </div>
       <br/>
       <hr className='border-dark-teal border-2'/>
-      <p className='p-4'>Online registration has closed. On-site registration will be available for late registrants.<br/>If you submitted a poster, decisions and time assignments will be released by October 11th.</p>
+      <p className='p-4'>Online registration has closed. Onsite registration will be available for late registrants.<br/>If you submitted a poster, decisions and time assignments will be released by October 11.</p>
     </div>
   </div>
 
