Update schedule with the Closet Times.mdx

--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -40,6 +40,7 @@ All times and events listed below are **tentative** and are subject to change.
 - **9:00 AM - 12:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **9:15 AM - 10:15 AM:** Workshop Block 3
 - **10:00 AM - 12:00 PM:** Career and Graduate Expo Success Clinic
+- **10:00 AM - 6:00 PM:** oSTEM Closet: Step Out in Style
 - **10:30 AM - 11:30 AM:** Workshop Block 4
 - **11:45 AM - 1:00 PM:** Plenary Lunch
 - **1:00 PM - 5:00 PM:** Career and Graduate School Expo
@@ -58,6 +59,7 @@ All times and events listed below are **tentative** and are subject to change.
 - **8:00 AM:**  Poster Room opens
 - **8:30 AM - 9:30 AM:** Workshop Block 6
 - **9:30 AM - 10:30 AM:** Poster Presentation 1
+- **10:00 AM - 4:00 PM:** oSTEM Closet: Step Out in Style
 - **10:30 AM - 11:30 AM:** Poster Presentation 2
 - **11:00 AM - 3:00 PM:** Career and Graduate School Expo
 - **3:00 PM - 4:00 PM:** Workshop Block 7
