Schedule - detailed/whova

--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -9,11 +9,26 @@ import Image from "next/image";
 
 <div className="font-bold text-nav-green">
 
+## 2024 Detailed Conference Schedule
+
+</div>
+
+Our detailed conference schedule is published on Whova and linked below. You do not need a Whova account to view our conference schedule. 
+
+However, you can get additional features with an account such as speaker bios, Q&A, the ability to build a personal agenda tailored to you, and more. If you're an attendee, we encourage you to use the Whova app!
+
+<br/>
+<CTAButton onClick="https://whova.com/embedded/event/cypiDSEfdD%40nXxOYQE1b7xiYdhJ46gzGRVlb1sE9eGc%3D" backgroundColor="ostem-blue" target='_blank'>View Detailed Schedule</CTAButton>
+<br/><br/>
+
+
+<div className="font-bold text-nav-green">
+
 ## 2024 High-Level Conference Schedule
 
 </div>
 
-All times and events listed below are **tentative** and are subject to change.
+Times and events listed below are subject to change. For the most up-to-date schedule, please see the detailed conference schedule linked above.
 
 <div className="text-teal-700 dark:text-teal-300">
 
