Add program book, remove doubletree

--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -112,11 +112,13 @@ The hotels listed below are all **first come, first served**. Hotels may be book
 <p><span className='text-red-800 dark:text-red-200'>1000 NE Multnomah, Portland, OR 97232</span>
 <br/>(5 blocks to OCC, 1 block to Light Rail)</p>
 
-Price: $199/day + Taxes
+<span className='text-red-800 dark:text-red-200'><b>This hotel block has closed</b>.</span>
+<br/>
 
-<a target='_blank' href='https://www.hilton.com/en/book/reservation/rooms/?ctyhocn=RLLC-DT&arrivalDate=2024-10-17&departureDate=2024-10-20&groupCode=CDTOST&room1NumAdults=1&cid=OM%2CWW%2CHILTONLINK%2CEN%2CDirectLink' className='border-red-400 text-red-800 dark:text-red-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
-  Book DoubleTree
-</a>
+
+<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
+  Booking Unavailable
+</p>
 
 
 
