--- a/src/pages/archive/2024/index.mdx
+++ b/src/pages/archive/2024/index.mdx
@@ -13,10 +13,10 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <div className="border-chill-green border-solid text-center">
   <picture>
-    <source srcSet="/images/2025/15th_banner_square.webp" media='(orientation: portrait)'/>
+    <source srcSet="/images/2024/14th_banner_square.webp" media='(orientation: portrait)'/>
     <img
-      alt="Banner for the 15th Annual oSTEM Conference, from October 16-19 in Baltimore, MD."
-      src="/images/2025/15th_annual_banner.png"
+      alt="Banner for the 14th Annual oSTEM Conference, from October 17-20 in Portland, OR."
+      src="/images/2024/14th_annual_banner.png"
       className="flex w-200 mx-auto rounded"
     />
   </picture>
@@ -25,16 +25,28 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <div className="grid md:grid-cols-5">
   <div className="rounded md:col-span-5 mt-8 border-4 border-dark-teal border-solid bg-dark-teal">
-    <h3 className="p-4 pt-3">2025 Conference</h3>
+    <h3 className="p-4 pt-3">2024 Conference</h3>
     <div className="bg-primary text-center rounded">
       <div className='pt-4'>
-        <span>We are excited to see you soon for our 15<sup>th</sup> Annual Conference!
-        <br/>While we are getting things ready for you, we wanted to share a few details!
-        <br/>
-        <br/>Dates: Thursday, October 16th through Sunday, October 19th 2025
-        <br/>Location: Baltimore, Maryland at the Baltimore Convention Center</span>   
+        <span >We are excited to see you soon for our 14<sup>th</sup> Annual Conference!<br/>Make the most out of conference with our event app, Whova. </span> 
+        <Popover className='inline-block'>
+          <Popover.Button><a>What is Whova?</a></Popover.Button>
+          <Popover.Panel className='absolute z-10 mt-1 bg-primary border border-secondary px-3 py-1 mr-2 rounded'><p>Whova allows you to get the most up to date information, preplan your personalized conference agenda, and connect with the conference community. Whova is available on iOS, Android, and Web.</p></Popover.Panel>
+        </Popover>
       </div>
       <ConferenceCountdown></ConferenceCountdown>
+      <div className="text-xl text-center p-2">
+        <CTAButton onClick="https://whova.com/portal/ostem_202411/" backgroundColor="ostem-blue" target='_blank' className='mb-4'><FontAwesomeIcon icon={faMobileAlt}></FontAwesomeIcon><FontAwesomeIcon icon={faDesktop} className='ml-2 mr-2'></FontAwesomeIcon>Whova Portal</CTAButton>
+        <br/>
+        <CTAButton onClick="https://cdn.ostem.org/publicfiles/oSTEM2024_ProgramBook_v2_Web.pdf" backgroundColor="bright-peach" target='_blank' className='mb-4 md:mb-0'>2024 Program Book</CTAButton>
+        <span className='hidden md:inline-block'>&nbsp;&nbsp;&nbsp;</span>
+        <CTAButton onClick="/2024/attend/resources" backgroundColor="bright-peach" target='_self'>Attendee Resources</CTAButton>
+        <br/>
+      </div>
+      <br/>
+      <hr className='border-dark-teal border-2'/>
+      <p className='p-4'>Online registration has closed. Onsite registration will be available for late registrants.</p>
+    </div>
   </div>
 
   <div className="rounded mt-8 md:col-span-5 bg-green-gray border-4 border-green-gray">
@@ -49,7 +61,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
     <div className='px-4 py-2'>
     <h3>Conference for LGBTQ+ People in STEM</h3>
     <p>
-      The 15th Annual oSTEM Conference will take place in Baltimore, MD
+      The 14th Annual oSTEM Conference will take place in Portland, OR
       with 1,100+ LGBTQ+ students, professionals, and recruiters in STEM fields
       from across the country and around the globe. This space is designed for
       attendees to share their professional and personal experiences and learn
@@ -74,6 +86,17 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
   >
     Sign Up for Our Newsletter
   </CTAButton>
+</div>
+
+<div className="mt-8 rounded">
+  <Image
+    className="rounded"
+    src="/images/2023/2023_homepage_image.jpg"
+    alt="A decorative image of oSTEM conference attendees sitting around a table. One attendee is in focus looking at another attendee, while four other attendees can be seen blurred in the foreground and background."
+    style={{width: "100%", height: 'auto'}}
+    width="800"
+    height="500"
+  />
 </div>
 
 </SiteLayout>
