--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -13,7 +13,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <div className="border-chill-green border-solid text-center">
   <picture>
-    <source srcSet="/images/2025/15th_banner_square.webp" media='(orientation: portrait)'/>
+    <source srcSet="/images/2025/15th_banner_square.png" media='(orientation: portrait)'/>
     <img
       alt="Banner for the 15th Annual oSTEM Conference, from October 16-19 in Baltimore, MD."
       src="/images/2025/15th_annual_banner.png"
@@ -35,6 +35,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
         <br/>Location: Baltimore, Maryland at the Baltimore Convention Center</span>   
       </div>
       <ConferenceCountdown></ConferenceCountdown>
+  </div>
   </div>
 
   <div className="rounded mt-8 md:col-span-5 bg-green-gray border-4 border-green-gray">
