Updates to bare conf info
- commented out nav bars
- changed graphics to cover names
- closed awards nominations
-
NominationClosed = true,
Components/awards/awardcards

Sitelayout
 else {
    updateBannerVisible = false;

--- a/src/pages/2025/awards/awards-chapter-leader.mdx
+++ b/src/pages/2025/awards/awards-chapter-leader.mdx
@@ -73,7 +73,7 @@ To make a nomination, please head to [the main Awards page for nomination forms]
   <AwardeeCard
     awardeeName="Billie Harrer - Georgia Tech"
     awardYear={2019}
-    profileImg="/images/awards/chapter-leader-award/william-harrer-2019.jpeg"
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
     altDesc="Profile picture of Billie Harrer"
     width={150}
     height={225}
