--- a/src/pages/2025/partner/exhibitors-and-sponsors.mdx
+++ b/src/pages/2025/partner/exhibitors-and-sponsors.mdx
@@ -7,7 +7,7 @@ import Image from "next/future/image";
 <SiteLayout title="Exhibition and Sponsorship Opportunities" accent="linen">
 
 <Image
-  src="/images/2024/partnership-banner-2024.webp"
+  src="/images/2025/partnership-banner-2025.png"
   alt="Decorative banner image showing three oSTEM attendees looking into the camera at a previous oSTEM national conference."
   style={{width: "100%", height: 'auto'}}
   width="1875"
@@ -19,7 +19,7 @@ import Image from "next/future/image";
 <div>
   oSTEM’s Annual Conference is built on unforgettable moments where LGBTQ+ STEM
   students and professionals engage their whole self, surrounded by a vibrant
-  community of peers. With nearly 1,200 attendees in 2023, oSTEM’s Annual
+  community of peers. With nearly 1,200 attendees in 2024, oSTEM’s Annual
   Conference is the country’s largest gathering of LGBTQ+ people in STEM.
 </div>
 
@@ -51,7 +51,7 @@ member of our community.
 <div className="flex flex-col items-center text-xl my-4">
   <div className="pb-4">
     <CTAButton
-      onClick="https://cdn.ostem.org/publicfiles/oSTEM2024ProspectusAnnualConference.pdf"
+      onClick="https://ostemfilestorage.blob.core.windows.net/publicfiles/oSTEM2025Prospectus.pdf"
       backgroundColor="bright-peach"
     >
       View our Partnership Prospectus
@@ -60,7 +60,7 @@ member of our community.
   <p className="font-bold">Ready to reserve your booth?</p>
   <div className="pt-2">
     <CTAButton
-      onClick="https://form.jotform.com/240584467726163"
+      onClick="https://form.jotform.com/250125741779158"
       backgroundColor="rasp"
     >
       Complete our commitment form
@@ -73,16 +73,6 @@ sponsorship@ostem.org.
 
 </div>
 
-<br />
-
-<Image
-  src="/images/2024/partnership-footer-image.jpg"
-  alt=""
-  style={{width: "100%", height: 'auto'}}
-  width="6000"
-  height="4000"
-  priority="true"
-/>
 
 <br />
 
@@ -146,16 +136,28 @@ These prestigious awards are an opportunity to celebrate the achievements,
 leadership, and dedication of LGBTQ+ individuals and allies who have made a
 significant impact in our fields. We encourage you to nominate deserving
 individuals or projects that embody the spirit of inclusivity, innovation, and
-progress. **Please note that 2024 awards are not open yet.**
+progress. **Please note that 2025 awards are not open yet.**
 
 <div className="mt-2 mb-8 pt-2 text-center">
   <CTAButton
-    onClick="/2023/awards#sponsor-awards"
+    onClick="/2024/awards#sponsor-awards"
     backgroundColor="rasp"
     target="_self"
   >
-    View 2023 Awards
+    View 2024 Awards
   </CTAButton>
 </div>
+
+
+<br />
+
+<Image
+  src="/images/2024/partnership-footer-image.jpg"
+  alt=""
+  style={{width: "100%", height: 'auto'}}
+  width="6000"
+  height="4000"
+  priority="true"
+/>
 
 </SiteLayout>
