--- a/src/pages/2025/whats-new.mdx
+++ b/src/pages/2025/whats-new.mdx
@@ -12,10 +12,10 @@ import Image from "next/image";
 
 As we continue to grow, we continuously implement changes to accomodate the ever increasing conference attendance size, changes based on the needs of our community, and changes that originate directly from **your** feedback.
 
-For 2024, our conference will be at a convention center for the very first time, specifically [the Oregon Convention Center](https://www.oregoncc.org). This is very exciting for us! It also means that conference will look quite different. 
+For 2025, our conference will be at a convention center for the very first time, specifically [the Oregon Convention Center](https://www.oregoncc.org). This is very exciting for us! It also means that conference will look quite different. 
 
 ### New Conference Dates
-Conference is happening significantly earlier this year! Our 14th Annual Conference will be taking place from October 17th to 20th in Portland, OR (compared to mid-November in previous years).
+Conference is happening significantly earlier this year! Our 15th Annual Conference will be taking place from October 17th to 20th in Baltimore, MD (compared to mid-November in previous years).
 
 Becuase of this, registration will also open significantly earlier. We expect to open it up sometime in June.
 
@@ -24,7 +24,7 @@ Instead of one hotel, we will have three hotels with group block rates. Hotels w
 
 
 ### Programming Changes
-Our [Request for Programs](/2024/present/request-for-programs) and [Request for Panel Topics](/2024/present/request-for-panel-topics) are now two separate pages and application forms. Furthermore, our request for programs will now be split into three distinct tracks: Collegiate, Industry, and Technical Spotlight. Please visit their pages for more information.
+Our [Request for Programs](/2025/present/request-for-programs) and [Request for Panel Topics](/2025/present/request-for-panel-topics) are now two separate pages and application forms. Furthermore, our request for programs will now be split into three distinct tracks: Collegiate, Industry, and Technical Spotlight. Please visit their pages for more information.
 
 We are keeping our 50% registration discount benefit for program presenters and panel moderators this year.
 
@@ -49,7 +49,7 @@ A new dark theme complements devices on dark mode and looks great at night. The 
 
 ### Revamped Pages
 
-Many pages have been either significantly improved or completely rebuilt from scratch for the 2024 (14th) annual conference. All images should now have alternative text for improved accessibility, and we've increased our use of (screen reader friendly) icons and (accessible) components to simplify navigation.
+Many pages have been either significantly improved or completely rebuilt from scratch for the 2025 (15th) annual conference. All images should now have alternative text for improved accessibility, and we've increased our use of (screen reader friendly) icons and (accessible) components to simplify navigation.
 
 ### Coming Soon: Previous Conference Archive
 
