--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -11,7 +11,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <SiteLayout>
 
-<div className="border-skyblue border-solid text-center">
+<div className="border-baltimore-blue border-solid text-center">
   <picture>
     <source srcSet="/images/2025/15th_banner_square.png" media='(orientation: portrait)'/>
     <img
@@ -23,21 +23,21 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 </div>
 
 <div className="grid md:grid-cols-5">
-  <div className="rounded md:col-span-5 mt-8 border-4 border-skyblue border-solid bg-skyblue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
     <h3 className="p-4 pt-3">2025 Conference Updates</h3>
     <div className="bg-primary text-center rounded">
       <div className='text-left p-4'>
-        <span>We are excited to see you soon for our 15<sup>th</sup> Annual Conference!
-        <br/>While we are getting things ready for you, we wanted to share a few details!
+        <span>We are excited to see you soon for our 15<sup>th</sup> Annual Conference!<br/>While we are getting things ready for you, we wanted to share a few details!</span>
         <br/>
         <br/><span className="font-bold">Dates:</span> Thursday, October 16th through Sunday, October 19th 2025
-        <br/><span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center</span>   
+        <br/><span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center
       </div>
       <br/>Sign Up to Be Notified when Registration or Request for Proposals Open
       <br/>
       <CTAButton
         onClick="https://form.jotform.com/243035405380145"
         backgroundColor="bright-peach"
+        className="mt-4"
         >
         Sign Up Here
       </CTAButton>
@@ -46,7 +46,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
     </div>
   </div>
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-skyblue border-solid bg-skyblue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
     <h3 className="p-4 pt-3">2025 Conference Countdown</h3>
     <div className="bg-primary text-center rounded">
       <ConferenceCountdown></ConferenceCountdown>
@@ -55,7 +55,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
   
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-skyblue border-solid bg-skyblue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
     <Image
       src="/images/2023/2023_homepage_bannerupdate.png"
       alt=""
