--- a/src/pages/archive/2024/index.mdx
+++ b/src/pages/archive/2024/index.mdx
@@ -2,9 +2,9 @@ import Image from "next/future/image";
 
 import { Popover } from '@headlessui/react';
 import { TextBadge } from '@/components/badge/TextBadge';
-import { CTAButton } from "../components/button/CTAButton";
-import { ConferenceCountdown } from "../components/ConferenceCountdown";
-import { SiteLayout } from "../components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { ConferenceCountdown } from "@/components/ConferenceCountdown";
+import { SiteLayout } from "@/components/layout/SiteLayout";
 
 import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
 import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
