adding in RFP page
Missing 2025 banner and square icon

--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -17,7 +17,7 @@ import Image from "next/future/image";
 
 </div>
 
-oSTEM is now accepting program proposals for the 14th Annual oSTEM Conference.
+oSTEM is now accepting program proposals for the 15th Annual oSTEM Conference.
 
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
@@ -35,24 +35,26 @@ Successful programs will align with oSTEM’s mission and core values: *integrit
 
 <div className="text-nav-blue font-bold">
 
-## 2024 Program Tracks and Updates
+## 2025 Program Tracks and Updates
 </div>
 
-Based on previous feedback, oSTEM is excited to introduce three tracks for the 2024 Conference: Collegiate, Industry, and Technical Spotlight. Please read a little bit about each track in order to decide which track is best suited for your submission. All submissions are expected to be in workshop format. Workshops are defined as 1-2 speakers presenting on a program topic. *All workshops are expected to be 50 minutes.*
+Based on previous feedback, oSTEM is excited to introduce three tracks for the 2025 Conference: Collegiate, Industry, and Technical Spotlight. Please read a little bit about each track in order to decide which track is best suited for your submission. All submissions are expected to be in workshop format. Workshops are defined as 1-2 speakers presenting on a program topic. *All workshops are expected to be 50 minutes.*
 
 
 **Collegiate:** This track is focused for individuals who regularly interact with a student population or hold positions that are based in academia. Submissions for this track will be applicable to undergraduate, graduate, and faculty/staff positions in order to build a network of tools and resources to take back to the participant’s home institution. 
 
-**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. These topics will focus on how to better engage your employer and advocate for LGBT+ populations during your work day. This can be anecdotal accomplishments or tips on how to effectively develop a queer network in a professional setting. 
+**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. Potential workshop topics include how to better. engage your employer, advocate for LGBT+ populations during your work day, build career-development skills, or shape your professional brand.
 
-**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2024 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering.
+**Government and Community Organizations:**  Programming in this track will focus on the intersections between science and society, Workshops should engage conference attendees who are current employees of or interested in working for nonprofits, community organizations, political thinktanks, and/or local, state, or federal government. Examples of topics for this track include the role of scientists in government agencies, science policy and law, and utilizing science in advocacy work.
+
+**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering.
 
 You can learn more about the three tracks below:
 
 <div>
 <Tab.Group>
 <Tab.List className='z-10 mt-4 py-1 sm:py-2 sticky top-[87px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>{
-    ['Collegiate', 'Industry', 'Technical Spotlight'].map(e => (<Tab key={e} className={({selected}) => (`${selected ? `bg-blue-300/25 border-nav-blue/90` : `hover:bg-blue-300/15`} text-nav-blue border border-transparent transition text-sm sm:text-base rounded px-1 sm:px-2 py-0.5`)}>{e}</Tab>))
+    ['Collegiate', 'Industry','Government and Community Organizations', 'Technical Spotlight'].map(e => (<Tab key={e} className={({selected}) => (`${selected ? `bg-blue-300/25 border-nav-blue/90` : `hover:bg-blue-300/15`} text-nav-blue border border-transparent transition text-sm sm:text-base rounded px-1 sm:px-2 py-0.5`)}>{e}</Tab>))
 }</Tab.List>
 <Tab.Panels className='border-b border-text-color px-4 bg-blue-500/10'>
 <Tab.Panel>
@@ -77,9 +79,9 @@ A description of each submission category is provided below:
 **Owning Your Identity On and Off Campus** - Programs submitted in this category will describe different lived experiences in order to foster relationships outside the bubble of a college campus resource center. Workshops will explore different identities and how these identities can shape a college experience. These sessions would also encompass navigating difficult conversations with University leadership and how to make effective change on campus.
 
 **Advancing in Academia** - Submissions will focus on next-steps to take when looking to stay in an academic setting. This may include but is not limited to: choosing a graduate program (PhD, JD, MD, PharmD), looking for a postdoc position, and applying for faculty positions. 
-Other Relevant Topics - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and queer populations in an academic setting. 
+Other Relevant Topics - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an academic setting. 
 
-**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and queer populations in an academic setting. 
+**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an academic setting. 
 
 </Tab.Panel>
 <Tab.Panel>
@@ -105,11 +107,44 @@ A description of each submission category is provided below:
 
 **DEI and Creating Inclusive Spaces at Work** -  This category highlights successful tips and initiatives that have been enacted at their company. Workshop will talk about best practices in talent acquisition and management, establishing and maintaining employee resource groups (ERGs), and what key factors future employees should be looking for when applying for jobs. 
 
-**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and queer populations in an industry setting.
+**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an industry setting.
 
 </Tab.Panel>
+
+
 <Tab.Panel>
 <div className="text-nav-blue font-bold">
+
+
+### Government and Community Organizations Program Topics
+</div>
+
+Presentations are required to fall within the following categories: 
+1. (1) Science Policy and Law
+2. (2) Working as a Scientist in Federal, State, and Local Government
+3. (3) STEM and Community/Non-Profit Organizations
+4. (4) General Advocacy
+5. and (5) Other Relevant Topics.
+
+A description of each submission category is provided below:
+
+**Science Policy and Law** - How is science used to better our communities, and how does policy shape our science? In these workshops, presenters will highlight how scientific knowledge is and can be used to inform law, policy, and regulations at various levels of government. Additionally, workshops may highlight how laws/regulations affect scientific research, how scientists can get involved in the policy process, and succeeding to a science policy career.
+
+**Working as a Scientist in Federal, State, and Local Government** - All levels of government rely on scientists of varying fields to advance research, communicate with the public, manage programs, and guide policymakers. Workshops in this category will explore various aspects of working as a scientist for the government, such as: finding and securing a government job, interacting with lawmakers and agencies, and the changing landscape of scientists working in government.
+
+**STEM and Community/Non-Profit Organizations** - Submissions in this category should be from scientists/engineers working in nonprofit organizations, professionals working in science nonprofits, and/or researchers collaborating with nonprofits and/or other community organizations. Areas of discussion may include the pros and cons of working for a nonprofit organization, how scientists can work with community organizations, and how nonprofits can benefit STEM professionals.
+
+**General Advocacy** - LGBTQ+ people have long been central in advancing advocacy efforts, both for our own community and for other causes. Submissions for this workshop topic should be from LGBTQ+ activists, community organizers, science communicators, and other individuals experienced and knowledgeable in advocacy work who are interested in sharing their expertise with LGBTQ+ STEM students and professionals. Any aspect of advocacy work can be discussed, such as getting started in advocacy, personal safety considerations necessary for advocacy work, or effectively engaging stakeholders.
+
+**Other Relevant Topics** - Interested in presenting something that doesn't fit into one of these categories? That's great! People don't always fit neatly into a box so we don't expect our programs to either. Please submit a program of your choosing that relates to the government and community organizations track.
+
+</Tab.Panel>
+
+
+
+<Tab.Panel>
+<div className="text-nav-blue font-bold">
+
 
 ### Technical Spotlight Program Topics
 </div>
@@ -134,10 +169,10 @@ A description of each submission category is provided below:
 
 <div className="text-nav-blue font-bold">
 
-## 2024 Proposal Components
+## 2025 Proposal Components
 </div>
 
-The strongest proposals will highlight intersectionality between STEM and queer identities. Program selection for our conference is highly competitive. Please follow the guidelines that have been outlined in this document to improve your chances of being selected. 
+The strongest proposals will highlight intersectionality between STEM and LGBTQ+ identities. Program selection for our conference is highly competitive. Please follow the guidelines that have been outlined in this document to improve your chances of being selected. 
 
 Your submission will be evaluated based on the following: 
 - An engaging title and abstract
@@ -211,7 +246,7 @@ Your proposal must include the following components:
 ## Additional Info
 </div>
 
-For more information about the conference visit https://ostem.org/conference-2024. *(Not published yet)*
+For more information about the conference visit https://conference.ostem.org
 
 For more information about oSTEM visit https://ostem.org
 
