Updates on language
LGBTQ+

--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -43,11 +43,11 @@ Based on previous feedback, oSTEM is excited to introduce three tracks for the 2
 
 **Collegiate:** This track is focused for individuals who regularly interact with a student population or hold positions that are based in academia. Submissions for this track will be applicable to undergraduate, graduate, and faculty/staff positions in order to build a network of tools and resources to take back to the participant’s home institution. 
 
-**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. Potential workshop topics include how to better. engage your employer, advocate for LGBT+ populations during your work day, build career-development skills, or shape your professional brand.
+**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. Potential workshop topics include how to better. engage your employer, advocate for LGBTQ+ populations during your work day, build career-development skills, or shape your professional brand.
 
 **Government and Community Organizations:**  Programming in this track will focus on the intersections between science and society, Workshops should engage conference attendees who are current employees of or interested in working for nonprofits, community organizations, political thinktanks, and/or local, state, or federal government. Examples of topics for this track include the role of scientists in government agencies, science policy and law, and utilizing science in advocacy work.
 
-**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBT+ Population, and Sustainable Engineering.
+**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBTQ+ Population, and Sustainable Engineering.
 
 You can learn more about the three tracks below:
 
@@ -101,7 +101,7 @@ A description of each submission category is provided below:
 
 **Navigating the Change from School to Industry** - Workshops in this category will mainly focus on tangible career building skills, such as interviewing tips, the difference between a resume/CV, managing salary expectations, and developing your personal brand
 
-**Developing Skills for Early to Mid-Career Success** - The goal of these sessions is to provide practical advice that will accelerate the development of LGBT+ talent in STEM.  Some examples include strategic networking & mentorship, people leadership, analysis of industry trends, and continuing education.
+**Developing Skills for Early to Mid-Career Success** - The goal of these sessions is to provide practical advice that will accelerate the development of LGBTQ+ talent in STEM.  Some examples include strategic networking & mentorship, people leadership, analysis of industry trends, and continuing education.
 
 **Pathways to STEM as a non-STEM professional** - There are a large number of ways to learn new technical skills, but these skills can also be translatable to different STEM fields. Workshops in this category will be from individuals that have either found a passion for STEM and entered from a different field, or have found another way to market their skillset in a different job setting. 
 
@@ -151,7 +151,7 @@ A description of each submission category is provided below:
 
 Presentations are required to fall within the following categories: 
 1. (1) AI and Machine Learning 
-2. (2) Research Study and Design in LGBT+ Populations
+2. (2) Research Study and Design in LGBTQ+ Populations
 3. (3) Sustainable Engineering 
 
 A description of each submission category is provided below:
