--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -24,15 +24,17 @@ We have a wealth of general information on our conference Notion page. Topics in
 
 <br/>
 
+
+
 <div className="text-nav-green font-bold">
 
 ## Getting to the Conference
 
 </div>
 
-The 14<sup>th</sup> annual conference will be taking place at the <a href='https://www.oregoncc.org/en' target='_blank'>Oregon Convention Center</a> in Portland, OR.
+The 15<sup>th</sup> annual conference will be taking place at the <a href='https://www.bccenter.org/' target='_blank'>Baltimore Convention Center</a> in Baltimore, MD.
 
-The address of the Convention Center is <b>777 NE Martin Luther King, Jr. Boulevard, Portland, OR 97232</b>.
+The address of the Convention Center is <b>1 West Pratt Street, Baltimore, MD 21201</b>.
 
 <br/>
 
@@ -40,18 +42,18 @@ The address of the Convention Center is <b>777 NE Martin Luther King, Jr. Boulev
 <div className='w-full'>
 <h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faPlane} className={"social-icon"} fixedWidth /> Plane</h3>
 
-The closest airport is Portland International Airport (PDX). The [TriMet MAX Red Line (Light Rail)](https://trimet.org/home/planner-trip?fromPlace=Portland%20Int%27l%20Airport%20MAX%20Station%20(ID%2010579)%3A%3A45.587584%2C-122.5931&toPlace=Convention%20Center%20MAX%20Station%3A%3A45.5300519305776%2C-122.661907990664&date=2024-06-09&time=17%3A21&arriveBy=false&mode=WALK%2CBUS%2CTRAM%2CRAIL%2CGONDOLA&showIntermediateStops=true&maxWalkDistance=1609&walkSpeed=1.34&ignoreRealtimeUpdates=false&numItineraries=1&otherThanPreferredRoutesPenalty=900&tripOption=1) offers a direct connection from the airport to the Convention Center and costs $2.80 each way.
+The closest airport is Baltimore/Washington International Thurgood Marshall Airport (BWI). The [MTA  Light RailLink (Light Rail)](https://www.mta.maryland.gov/schedule/lightrail) offers a direct connection from the airport to the Convention Center and costs $2.00 each way.
 </div>
 <div className='w-full'>
 <h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faTrain} className={"social-icon"} fixedWidth /> Train</h3>
 
-The [Amtrak PDX station](https://www.amtrak.com/stations/pdx) is the closest station to the Oregon Convention Center. Similar to PDX airport, you can take the Light Rail directly from the train station to the Convention Center.
+The [Baltimore Penn station](https://www.amtrak.com/stations/bal) is the closest Amtrak station to the Baltimore Convention Center. The MTA Light Rail station is a 7 minute walk from the train station.
 
 </div>
 <div className='w-full'>
 <h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faCar} className={"social-icon"} fixedWidth /> Car</h3>
 
-If you're driving and need parking, please refer to [the OCC website for detailed parking information](https://www.oregoncc.org/en/attend/parking-directions). There is a charge for on-site parking which will not be covered by oSTEM.
+If you're driving and need parking, please refer to [the BCC website for detailed parking information](https://www.bccenter.org/p/attend/directions--parking). There is a charge for on-site parking which will not be covered by oSTEM.
 </div>
 </div>
 
@@ -59,31 +61,13 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 <div className="text-nav-green font-bold">
 
-## Conference Accessibility
-
-</div>
-
-For general accessibility questions, please email our accessibility team at access@ostem.org.
-
-During online registration we ask what accomodations you need. We aim to fulfill all reasonable accomodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accomodations may be more limited. You can also email us for inquiries into accomodations.
-
-For additional accessibility information available at the convention center, please visit https://www.oregoncc.org/en/accessibility.
-
-Mobility: Starting **September 17th**, on-site reservations for wheelchairs and scooters can be made directly with OCC.
-- A separate reservation is required for each day. 
-- Reservations may be made by contacting guestexperience@oregoncc.org or 503-731-7800.
-
-<br/>
-
-<div className="text-nav-green font-bold">
-
-## Lodging and Food
+## Lodging
 
 </div>
 
 ### General Lodging Information
 
-To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple hotel blocks</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the Light Rail station and the Convention Center. Because we have multiple hotels this year, please note the following:
+Please see the hotel blocks below for the 2025 Annual Conference. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the Light Rail station and the Convention Center. Because we have multiple hotels this year, please note the following:
 
 - There are three general hotels that can be reserved by any attendee.
   - All hotels are within 5 blocks of both the Convention Center and the Light Rail station.
@@ -96,73 +80,84 @@ To accomodate the increasing number of attendees each year, we are excited to an
 
 ### Conference Hotels
 
-The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by October 3rd, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
+The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 23rd, 2025, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17.5% charge for taxes and fees.
 
 <BannerMessage icon={faInfo} type='info' closeButton={false}>
-  We have secured the oSTEM room block discount for any length of stay between Wednesday, October 16 and Monday, October 21.
+  We have secured the oSTEM room block discount for any length of stay between Wednesday, October 15 and Monday, October 20.
 </BannerMessage>
 
 <div className='flex flex-col md:flex-row gap-x-4'>
 <div className='w-full'>
-<h3>DoubleTree</h3>
+<h3>Hyatt Regency</h3>
 <hr className='border-red-400 border-b-2 rounded'/>
 
-**DoubleTree by Hilton Portland**
+**Hyatt Regency Baltimore**
 
-<p><span className='text-red-800 dark:text-red-200'>1000 NE Multnomah, Portland, OR 97232</span>
-<br/>(5 blocks to OCC, 1 block to Light Rail)</p>
+<p><span className='text-red-800 dark:text-red-200'>300 Light Street,
+Baltimore, MD, 21202</span>
+<br/>(1 block to BCC, 2 blocks to Light Rail)
+<br/>$225 per Night plus taxes and fees</p>
 
-<span className='text-red-800 dark:text-red-200'><b>This hotel block has closed</b>.</span>
+<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
 <br/>
 
 
 <p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Booking Unavailable
+  Coming Soon!
 </p>
 
 
 
 </div>
 <div className='w-full'>
-<h3>Courtyard</h3>
+<h3>Marriott</h3>
 <hr className='border-pink-400 border-b-2 rounded'/>
 
-**Courtyard Portland Downtown Convention Center**
+**Marriott Inner Harbor (at Camden Yards)**
 
-<p><span className='text-pink-800 dark:text-pink-200'>435 NE Wasco St, Portland, Oregon 97232</span>
-<br/>(2 blocks to OCC, 2 blocks to Light Rail)</p>
+<p><span className='text-pink-800 dark:text-pink-200'>110 S Eutaw St, Baltimore, MD 21201</span>
+<br/>(3 blocks to BCC, 2 blocks to Light Rail)
+<br/>$229 per Night plus taxes and fees</p>
 
-<span className='text-red-800 dark:text-red-200'><b>This hotel block is full</b>.</span>
+<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
 <br/>
 
 
 <p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Booking Unavailable
+  Coming Soon!
 </p>
 
 </div>
 <div className='w-full'>
-<h3>Crowne Plaza</h3>
+<h3>Sheraton</h3>
 <hr className='border-indigo-400 border-b-2 rounded'/>
 
-**Crowne Plaza Portland Downtown Convention Center**
+**Sheraton Inner Harbor**
 
-<p><span className='text-indigo-800 dark:text-indigo-200'>1441 NE 2nd Ave, Portland, OR 97232</span>
-<br/>(4 blocks to OCC, 4 blocks to Light Rail)</p>
+<p><span className='text-indigo-800 dark:text-indigo-200'>300 S Charles St, Baltimore, MD 21201</span>
+<br/>(3 blocks to OCC, 2 blocks to Light Rail)
+<br/>$229 per Night plus taxes and fees</p>
 
 
-<span className='text-red-800 dark:text-red-200'><b>This hotel block is full</b>.</span>
+<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
 <br/>
 
 
 <p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Booking Unavailable
+  Coming Soon!
 </p>
 
 </div>
 </div>
 
 <br/>
+
+
+<div className="text-nav-green font-bold">
+
+## Food
+
+</div>
 
 ### Meals
 
@@ -176,6 +171,20 @@ Your collegiate/professional registration includes meals if made online. Meals a
 
 <br/>
 
+<div className="text-nav-green font-bold">
+
+## Conference Accessibility
+
+</div>
+
+For general accessibility questions, please email our accessibility team at access@ostem.org.
+
+During online registration we ask what accomodations you need. We aim to fulfill all reasonable accomodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accomodations may be more limited. You can also email us for inquiries into accomodations.
+
+For additional accessibility information available at the convention center, please visit https://www.bccenter.org/p/about/faqs.
+
+<br/>
+
 ---
 
 <div className="text-nav-green font-bold">
@@ -186,7 +195,10 @@ Your collegiate/professional registration includes meals if made online. Meals a
 
 The following resources are third-party resources and are not affiliated or sponsored by oSTEM in any way.
 
-- **Travel Gay Portland** is a LGBTQ+ visitor center that offers a free baggage drop off at their visitor center along along with general information about Portland. For more info, please visit https://travelgayportland.com.
+- **Visit Baltimore** is a hub of information for all things Baltimore. Check out their Charm City Passport for discounts!  For more info, please visit https://baltimore.org/guides/an-lgbtq-guide-to-baltimore/.
+
+- **Baltimore Beat** is is a Black-led, Black-controlled nonprofit newspaper and media outlet. Check out their stories to learn about life in Baltimore.  Check out their Calendars to see events happening during conference weekend! Check out their Charm City Passport for discounts!  For more info, please visit https://baltimorebeat.com/.
+
 
 <br/>
 </SiteLayout>
